# OpenData

./: .editorconfig  .gitignore  LICENCE  README.md  base.js  connexion.html  global.css  pyproject.toml  requirements.txt
doc/: models.puml  style.puml
fixtures/: example.json  themes.json
open_data/: README.md  badges.json  pyproject.toml
open_data/app/: README.md  urls.py  views.py
open_data/app/templates/: base-popularized.html  base.html  data.html  forum.html  home.html  login.html  navbar.html  navbar2.html  profile.html  quiz.html  scoreboard.html  scores.html  search.html
open_data/badge/: README.md  admin.py  apps.py  base.py  models.py  registry.py  signals.py  stereotypes.py  urls.py  views.py
open_data/badge/badges/: quiz.py
open_data/badge/migrations/: 0001_initial.py  0002_badgeaward_user.py
open_data/badge/signals/: badge_awarded.py
open_data/dataset/: README.md  admin.py  apps.py  badges.py  models.py  nlp.py  signals.py  svg.py  svgimagefield.py  urls.py  views.py
open_data/open_data/: settings.py  urls.py
open_data/profil/: admin.py  forms.py  models.py  urls.py  views.py
open_data/quiz/: README.md  admin.py  badges.py  forms.py  models.py  urls.py  views.py
open_data/theme/: apps.py  urls.py  views.py
open_data/user/: README.md  admin.py  badges.py  forms.py  middlewares.py  models.py  urls.py  views.py
prototypes/: connexion.html  forum-comment.css  forum-comment.html  forum-list.css  forum-list.html  index.html  index_with_login.html  login.css  profil.css  profil.html  profil_with_login.html  quiz.html
(+144 files in other folders)
